express.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo-express-deployment
  namespace: default
  labels:
    app: mongo-express
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
      tier: frontend
  template:
    metadata:
      labels:
        app: mongo-express
        tier: frontend
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
    tier: frontend
  ports:
    - protocol: TCP
      port: 8081 #abstracted service port
      targetPort: 8081 #container port
  type: NodePort
