mongodb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployment
  namespace: default
  labels:
    app: mongodb
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      tier: backend
  template:
    metadata:
      labels:
        app: mongodb
        tier: backend
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: local-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
    tier: backend
  ports:
    - protocol: TCP
      port: 27017 #abstracted service port
      targetPort: 27017 #container port
